--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 # version of compose 
-version: "3.1"        
+version: "3.1"
+services:        
   app:
 # container defines name of container 
 # path of Dockerfile(just directory)
