--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - firefox-container
     volumes:             // maps so changes to these can be seen
-      - ./
+      - .:/app/
 # pulls firefox image from docker-hub
 #in case you want to use chrome you can put image of that
   firefox-container:
