--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   app:
 # container defines name of container 
 # path of Dockerfile(just directory)
-# which port of host is mapped to container 
+# which port of host is mapped to container
+  context: .
+      dockerfile: Dockerfile
     container_name: quorascraper
     build: .             
     ports:               
