--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
 #in case you want to use chrome you can put image of that
   firefox-container:
     container_name: firefox-container
-    image: selenium/standalone-firefox
+    image: selenium/standalone-firefox:latest
     volumes:
       - /dev/shm:/dev/shm
     ports:
