--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,21 @@ services:
 # container defines name of container 
 # path of Dockerfile(just directory)
 # which port of host is mapped to container
-
     container_name: quorascraper
-    build:
-      context: .
-      dockerfile: Dockerfile           
+    build: .          
     ports:               
       - "3000:3000"  
 # dependencies  
-    depends_on:
-      - firefox-container
+    # depends_on:
+    #   - firefox-container
     volumes:
       - .:/app
 # pulls firefox image from docker-hub
 #in case you want to use chrome you can put image of that
-  firefox-container:
-    container_name: firefox-container
-    image: selenium/standalone-firefox:latest
-    volumes:
-      - /dev/shm:/dev/shm
-    ports:
-      - "4444:4444"
+  # firefox-container:
+  #   container_name: firefox-container
+  #   image: selenium/standalone-firefox:latest
+  #   volumes:
+  #     - /dev/shm:/dev/shm
+  #   ports:
+  #     - "4444:4444"
