--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,16 @@ services:
     ports:               
       - "3000:3000"  
 # dependencies  
-    # depends_on:
-    #   - firefox-container
+    depends_on:
+      - firefox-container
     volumes:
       - .:/app
 # pulls firefox image from docker-hub
 #in case you want to use chrome you can put image of that
-  # firefox-container:
-  #   container_name: firefox-container
-  #   image: selenium/standalone-firefox:latest
-  #   volumes:
-  #     - /dev/shm:/dev/shm
-  #   ports:
-  #     - "4444:4444"
+  firefox-container:
+    container_name: firefox-container
+    image: selenium/standalone-firefox:latest
+    volumes:
+      - /dev/shm:/dev/shm
+    ports:
+      - "4444:4444"
